@@ -1,3 +1,10 @@
+= Unreleased
+
+* It's now possible to customize the TreeBuilder object by passing
+   keyword arguments into the BeautifulSoup constructor. The main
+   reason to do this right now is to change how multi-valued
+   attributes are treated. [bug=1832978]
+
 = 4.7.1 (20190106)
 
 * Fixed a significant performance problem introduced in 4.7.0. [bug=1810617]
